@@ -1,5 +1,7 @@
 package org.example.quanlybanhang.controller.category;
 
+import javafx.beans.property.IntegerProperty;
+import javafx.beans.property.SimpleIntegerProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
@@ -10,54 +12,35 @@ import org.example.quanlybanhang.helpers.DialogHelper;
 import org.example.quanlybanhang.model.Category;
 import org.example.quanlybanhang.service.CategoryService;
 import org.example.quanlybanhang.service.SearchService;
+import org.example.quanlybanhang.utils.PaginationUtils;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class CategoryController {
 
-    @FXML
-    private TextField searchField;
-
-    @FXML
-    private Button addCategoryButton;
-
-    @FXML
-    private TableView<Category> categoryTable;
-
-    @FXML
-    private TableColumn<Category, Integer> idColumn;
-
-    @FXML
-    private TableColumn<Category, String> categoryColum;
-
-    @FXML
-    private TableColumn<Category, String> nameColumn;
-
-    @FXML
-    private TableColumn<Category, String> descriptionColumn;
-
-    @FXML
-    private TextField nameField;
-
-    @FXML
-    private TextArea descriptionArea;
-
-    @FXML
-    private ComboBox<String> childCategoryCombo;
-
-    @FXML
-    private Button saveButton;
-
-    @FXML
-    private RadioButton radioParent;
-
-    @FXML
-    private RadioButton radioChild;
+    @FXML private TextField searchField;
+    @FXML private Button addCategoryButton;
+    @FXML private TableView<Category> categoryTable;
+    @FXML private TableColumn<Category, Integer> idColumn;
+    @FXML private TableColumn<Category, String> categoryColum;
+    @FXML private TableColumn<Category, String> nameColumn;
+    @FXML private TableColumn<Category, String> descriptionColumn;
+    @FXML private TextField nameField;
+    @FXML private TextArea descriptionArea;
+    @FXML private ComboBox<String> childCategoryCombo;
+    @FXML private Button saveButton;
+    @FXML private RadioButton radioParent;
+    @FXML private RadioButton radioChild;
+    @FXML private Pagination pagination;
 
     private ToggleGroup categoryTypeGroup;
-    private ObservableList<Category> categoryList;
+    private ObservableList<Category> categoryList = FXCollections.observableArrayList();
+    private final ObservableList<Category> pagedCategoryList = FXCollections.observableArrayList();
     private final CategoryService categoryService = new CategoryService();
+
+    private final IntegerProperty currentPage = new SimpleIntegerProperty(0);
+    private final int itemsPerPage = 5;  // Số mục trên mỗi trang
 
     @FXML
     public void initialize() {
@@ -73,44 +56,79 @@ public class CategoryController {
         radioParent.setSelected(true); // mặc định
 
         loadCategories();
-
-        // Click vào hàng để fill data
-        categoryTable.setOnMouseClicked(event -> {
-            Category selectedCategory = categoryTable.getSelectionModel().getSelectedItem();
-            if (selectedCategory != null) {
-                nameField.setText(selectedCategory.getName());
-                descriptionArea.setText(selectedCategory.getDescription());
-
-                // Thiết lập lại radio
-                if (selectedCategory.getParentId() == 0) {
-                    radioParent.setSelected(true);
-                } else {
-                    radioChild.setSelected(true);
-                }
-
-                // Load danh mục con
-                loadChildCategories(selectedCategory.getId());
-            }
-        });
+        setupPagination();
 
         addCategoryButton.setOnAction(event ->
-                DialogHelper.showDialog("/org/example/quanlybanhang/views/category/AddCategoryDialog.fxml", "Thêm Danh Mục Mới", (Stage) addCategoryButton.getScene().getWindow()
-                )
+                DialogHelper.showDialog("/org/example/quanlybanhang/views/category/AddCategoryDialog.fxml", "Thêm Danh Mục Mới", (Stage) addCategoryButton.getScene().getWindow())
         );
 
         saveButton.setOnAction(event -> handleSaveAction());
 
         searchField.textProperty().addListener((observable, oldValue, newValue) -> searchCategories(newValue));
 
-        radioChild.setOnAction(event -> {
-            loadParentCategories();  // Gọi method mới để load danh mục cha vào combo box
+        radioChild.setOnAction(event -> loadParentCategories());
+
+        categoryTable.setOnMouseClicked(event -> {
+            Category selectedCategory = categoryTable.getSelectionModel().getSelectedItem();
+            if (selectedCategory != null) {
+                nameField.setText(selectedCategory.getName());
+                descriptionArea.setText(selectedCategory.getDescription());
+
+                if (selectedCategory.getParentId() == 0) {
+                    radioParent.setSelected(true);
+                } else {
+                    radioChild.setSelected(true);
+                }
+
+                loadChildCategories(selectedCategory.getId());
+            }
         });
+    }
+
+    private void loadCategories() {
+        categoryList = FXCollections.observableArrayList(categoryService.getAllCategories());
+        filterAndPaginateCategories();
+    }
+
+    private void filterAndPaginateCategories() {
+        List<Category> filteredCategories = categoryList.stream()
+                .collect(Collectors.toList());  // Add filtering logic if needed
+        pagedCategoryList.setAll(filteredCategories);
+    }
+
+    private void setupPagination() {
+        pagination.setPageCount((int) Math.ceil((double) categoryList.size() / itemsPerPage));
+        pagination.setCurrentPageIndex(currentPage.get());
+
+        pagination.currentPageIndexProperty().addListener((observable, oldValue, newValue) -> {
+            currentPage.set(newValue.intValue());
+            updatePageData();
+        });
+        updatePageData();
+    }
+
+    private void updatePageData() {
+        int start = currentPage.get() * itemsPerPage;
+        int end = Math.min(start + itemsPerPage, categoryList.size());
+        pagedCategoryList.setAll(categoryList.subList(start, end));
+        categoryTable.setItems(pagedCategoryList);
+    }
+
+    private void searchCategories(String keyword) {
+        if (keyword == null || keyword.trim().isEmpty()) {
+            loadCategories();
+        } else {
+            List<Category> filteredCategories = SearchService.search(categoryList, keyword,
+                    Category::getName, Category::getDescription);
+            pagedCategoryList.setAll(filteredCategories);
+            categoryTable.setItems(pagedCategoryList);
+        }
     }
 
     private void loadParentCategories() {
         List<Category> parentCategories = categoryList.stream()
                 .filter(cat -> cat.getParentId() == 0)
-                .toList();
+                .collect(Collectors.toList());
 
         List<String> parentNames = parentCategories.stream()
                 .map(Category::getName)
@@ -119,24 +137,20 @@ public class CategoryController {
         childCategoryCombo.setItems(FXCollections.observableArrayList(parentNames));
 
         if (!parentNames.isEmpty()) {
-            childCategoryCombo.setValue(parentNames.getFirst());
+            childCategoryCombo.setValue(parentNames.get(0));
         }
     }
 
-
-    private void loadCategories() {
-        categoryList = categoryService.getAllCategories();
-        categoryTable.setItems(categoryList);
-    }
-
     private void loadChildCategories(int parentId) {
-        ObservableList<Category> childCategories = categoryService.getChildCategories(parentId);
+        ObservableList<Category> childCategories = FXCollections.observableArrayList(
+                categoryService.getChildCategories(parentId)
+        );
         List<String> childCategoryNames = childCategories.stream()
                 .map(Category::getName)
                 .collect(Collectors.toList());
         childCategoryCombo.setItems(FXCollections.observableArrayList(childCategoryNames));
         if (!childCategoryNames.isEmpty()) {
-            childCategoryCombo.setValue(childCategoryNames.getFirst());
+            childCategoryCombo.setValue(childCategoryNames.get(0));
         }
     }
 
@@ -150,7 +164,6 @@ public class CategoryController {
             selectedCategory.setName(name);
             selectedCategory.setDescription(description);
 
-            // Xử lý danh mục cha hoặc con
             if (radioParent.isSelected()) {
                 selectedCategory.setParentId(0);
             } else {
@@ -174,16 +187,6 @@ public class CategoryController {
             } else {
                 System.out.println("Cập nhật thất bại!");
             }
-        }
-    }
-
-    private void searchCategories(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            loadCategories();
-        } else {
-            List<Category> filteredCategories = SearchService.search(categoryList, keyword,
-                    Category::getName, Category::getDescription);
-            categoryTable.setItems(FXCollections.observableArrayList(filteredCategories));
         }
     }
 }
